--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
 </nav>
  </header>
 
+<div class="content flex w-full">
+<div class="headcontent  text-white w-full py-14 px-[80px] ">
+<h1 class="text-8xl " > Discover Restaurant & Delicious Food</h1>
+<p class="pt-5 pl-[10px] italic text-xl ">Behind every delicious, Soulfully Spiced Chicken meal and at the forefront of every great customer experience stands a passionate and committed person.</p>
+<button class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Order Now</button>
+</div>
+
+<div class="recipe h-[500px] w-6/12 " >
+    <div class="rounded-lg py-5 pr-8"  >
+        <img class="rounded-[80px]" src="img/rice.jpg" alt="">
+    </div>
+<h2>How is life with you?</h2>
+</div>
+<div class="recipe  h-[500px] w-6/12 py-5 pr-8" >
+        <img class="rounded-[80px] w-[500px]" src="img/rice.jpg" alt="">
+    <h2>How is life with you?</h2>
+    </div>
+
+
+
+ </div>
+
 
 
 
