--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class = "bg-black">
+<body class= "bg-black">
 <!-- header section -->
   <!-- logo imag -->
  <header class="flex " >
-<img class="h-[157px] w-[157px]"src="img/greatfull.png" alt="">
-<nav class="flex text-white align-middle bg-red absolute w-[700px]  top-0 right-0 py-[50px] space-x-[100px] " >
+<a href="#home" id="reloadLink"><img class="h-[157px] w-[157px] "src="img/greatfull.png" alt=""></a>
+<nav class="flex text-white align-middle bg-red absolute w-[700px] container mx-auto top-0 right-0 py-[50px] space-x-[100px] invisible sm:visible " >
 <a href="#" >Home</a>
 <a href="#">About</a>
 <a href="#">Service</a>
@@ -21,15 +21,21 @@
 </nav>
  </header>
 
-<div class="content flex w-full">
+<div class="content flex flex-col lg:flex-row">
+
 <div class="headcontent  text-white w-full py-14 px-[80px] ">
-<h1 class=" header text-8xl " > Discover Restaurant & Delicious Food</h1>
-<p class="pt-5 pl-[10px] italic text-xl ">Behind every delicious, Soulfully Spiced Chicken meal and at the forefront of every great customer experience stands a passionate and committed person.</p>
-<button class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Order Now</button>
+<h1 id="mainText" class=" main header text-7xl " > Discover Restaurant & Delicious Food</h1>
+<p id="subtext" class="pt-5 pl-[10px] italic text-xl ">Behind every delicious, Soulfully Spiced Chicken meal and at the forefront of every great customer experience stands a passionate and committed person.</p>
+<button id= "myButton" class= "rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Order Now</button>
+
+<button id = "btn" class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Change Message</button>
+<button id = "btn-2" class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Background</button>
+<button id = "btn-3" class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">Hide Dish</button>
+<button id = "btn-4" class="rounded-none bg-[#F14902] text-[#F6E7D8] font-bold uppercase p-2 px-5 m-4">New Dish</button>
 </div>
 
-<div class="recipe h-[500px] w-6/12 " >
-    <div class="rounded-lg py-5 pr-8"  >
+<div class="recipe h-[500px] lg:w-6/12 " >
+    <div class="rounded-lg py-5 pr-8 container max-w-md mx-auto"  >
         <img class="rounded-[80px] mb-4" src="img/rice.jpg" alt="">
         <h2 class="py-3 font-bold uppercase text-[#F6E7D8]">Nigerian Jollof Rice</h2>
 
@@ -51,22 +57,43 @@
     </svg>
 </div>
 
-        <p class="text-white">Behind every delicious, Soulfully Spiced Chicken meal and at the forefront of every great customer experience stands a passionate and committed person. </p>
+        <p class="text-white">At the heart of every mouthwatering, Soulfully Spiced Chicken dish and at the forefront of every exceptional customer experience is a dedicated and enthusiastic individual. </p>
     </div>
-<h2>How is life with you?</h2>
 </div>
-<div class="recipe  h-[500px] w-6/12 py-5 pr-8" >
-        <img class="rounded-[80px] w-[500px]" src="img/rice.jpg" alt="">
-    <h2>How is life with you?</h2>
+
+<div class="recipe h-[500px] lg:w-6/12 " >
+    <div class="rounded-lg py-5 pr-8 container max-w-md mx-auto"  >
+        <img id="img-2" class="rounded-[80px] mb-4" src="img/amala.jpg" alt="">
+        <h2 class="py-3 font-bold uppercase text-[#F6E7D8]">Nigerian Jollof Rice</h2>
+
+    <div class="flex items-center space-x-1">
+    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+        <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+    </svg>
+    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+        <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+    </svg>
+    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+        <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+    </svg>
+    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+        <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+    </svg>
+    <svg class="w-4 h-4 text-white dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+        <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+    </svg>
     </div>
 
+        <p class="text-white">At the heart of every mouthwatering, Soulfully Spiced Chicken dish and at the forefront of every exceptional customer experience is a dedicated and enthusiastic individual. </p>
+    </div>
+</div>
 
 
- </div>
 
 
 
- 
+
+
 
 
 
